# deps

./: .gitignore  .jobs_done.yaml  .pre-commit-config.yaml  .project  .pydevproject  CHANGELOG.rst  LICENSE  README.md  RELEASING.md  environment.devenv.yml  environment.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml  test.yml
etc/: slave_condarc
source/python/: .gitignore  conftest.py
