[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[project]
name = "deps"
version = "1.4.0"
description = "A tool to manipulate the dependencies and the project itself"
readme = "README.md"
authors = [
    { name = "ESSS", email = "dev@esss.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=7.0",
    "colorama>=0.4",
    "importlib-metadata>=8.7.0",
    "jinja2>=3.1",
    "pyyaml>=6.0.2",
    "typing_extensions",
]

[project.scripts]
deps = "deps.deps_cli:main_func"

[dependency-groups]
dev = [
    # click 8.2.1 has a bug regarding bool flags and env vars: https://github.com/pallets/click/pull/2956
    # this breaks test_force_color in our test suite.
    "click>=8.1,!=8.2.*",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear: find likely bugs and design problems.
    "C4",  # flake8-comprehensions: helps write better list/set/dict comprehensions.
    "E",   # Include all errors.
    "I",   # `isort`.
    "PL",  #  Pylint.
    "UP",  # pyupgrade.
]
ignore = [
    "E501",  # Line too long
    "PLC0415", # `import` should be at the top-level of a file
    "PLR",  # Heuristics from pylint.
    "PLW0603",  # `global` at module level is redundant: 1 error
    "PLW0604",  # `global` at module level is redundant: 1 error
    "UP031", # Use format specifiers instead of percent format
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
]
